Add video context menu items to MediaStream video.

This CL makes sure video context menu items show for MediaStream video.
Only "Picture-in-Picture" and "Show Controls" are enabled for now.

This also disables the "Loop" menu if video is a MediaStream or has
an infinite duration (Live).

Screenshot: https://i.imgur.com/P1t9urA.png

Bug: 899466
Change-Id: I309d7cf5918e8c17a84c3adfec4a8d7542336554
Reviewed-on: https://chromium-review.googlesource.com/c/1306997
Reviewed-by: Jochen Eisinger <jochen@chromium.org>
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Commit-Queue: François Beaufort <beaufort.francois@gmail.com>
Cr-Commit-Position: refs/heads/master@{#606543}