third_party/blink/renderer/core/html/media/html_media_element.h
@@ -125,6 +125,8 @@ class CORE_EXPORT HTMLMediaElement
 
   bool SupportsSave() const;
 
+  bool SupportsLoop() const;
+
   cc::Layer* CcLayer() const;
 
   enum DelayedActionType {
@@ -360,6 +362,7 @@ class CORE_EXPORT HTMLMediaElement
 
  private:
   // Friend class for testing.
+  friend class ContextMenuControllerTest;
   friend class MediaElementFillingViewportTest;
 
   void ResetMediaPlayerAndMediaSource();
