third_party/blink/renderer/core/layout/hit_test_result.cc
@@ -43,6 +43,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "third_party/blink/renderer/core/scroll/scrollbar.h"
 #include "third_party/blink/renderer/core/svg/svg_element.h"
 #include "third_party/blink/renderer/platform/geometry/region.h"
+#include "third_party/blink/renderer/platform/mediastream/media_stream_descriptor.h"
 
 namespace blink {
 
@@ -320,6 +321,12 @@ KURL HitTestResult::AbsoluteMediaURL() const {
   if (HTMLMediaElement* media_elt = MediaElement())
     return media_elt->currentSrc();
   return KURL();
+}
+
+MediaStreamDescriptor* HitTestResult::GetMediaStreamDescriptor() const {
+  if (HTMLMediaElement* media_elt = MediaElement())
+    return media_elt->GetSrcObject();
+  return nullptr;
 }
 
 HTMLMediaElement* HitTestResult::MediaElement() const {
