third_party/blink/renderer/core/layout/hit_test_result.h
@@ -43,6 +43,7 @@ class HTMLAreaElement;
 class HTMLMediaElement;
 class Image;
 class KURL;
+class MediaStreamDescriptor;
 class Node;
 class LayoutObject;
 class Region;
@@ -137,6 +138,7 @@ class CORE_EXPORT HitTestResult {
   IntRect ImageRect() const;
   KURL AbsoluteImageURL() const;
   KURL AbsoluteMediaURL() const;
+  MediaStreamDescriptor* GetMediaStreamDescriptor() const;
   KURL AbsoluteLinkURL() const;
   String TextContent() const;
   bool IsLiveLink() const;
