third_party/blink/renderer/core/page/context_menu_controller.cc
@@ -247,11 +247,13 @@ bool ContextMenuController::ShowContextMenu(LocalFrame* frame,
             image_element->CachedImage()->GetResponse());
       }
     }
-  } else if (!result.AbsoluteMediaURL().IsEmpty()) {
-    data.src_url = result.AbsoluteMediaURL();
+  } else if (!result.AbsoluteMediaURL().IsEmpty() ||
+             result.GetMediaStreamDescriptor()) {
+    if (!result.AbsoluteMediaURL().IsEmpty())
+      data.src_url = result.AbsoluteMediaURL();
 
-    // We know that if absoluteMediaURL() is not empty, then this
-    // is a media element.
+    // We know that if absoluteMediaURL() is not empty or element has a media
+    // stream descriptor, then this is a media element.
     HTMLMediaElement* media_element = ToHTMLMediaElement(result.InnerNode());
     if (IsHTMLVideoElement(*media_element)) {
       // A video element should be presented as an audio element when it has an
@@ -277,6 +279,8 @@ bool ContextMenuController::ShowContextMenu(LocalFrame* frame,
       data.media_flags |= WebContextMenuData::kMediaPaused;
     if (media_element->muted())
       data.media_flags |= WebContextMenuData::kMediaMuted;
+    if (media_element->SupportsLoop())
+      data.media_flags |= WebContextMenuData::kMediaCanLoop;
     if (media_element->Loop())
       data.media_flags |= WebContextMenuData::kMediaLoop;
     if (media_element->SupportsSave())
