third_party/blink/renderer/core/page/context_menu_controller_test.cc
@@ -6,6 +6,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "third_party/blink/renderer/core/page/context_menu_controller.h"
 
 #include "testing/gtest/include/gtest/gtest.h"
+#include "third_party/blink/public/platform/web_media_stream.h"
+#include "third_party/blink/public/platform/web_media_stream_track.h"
 #include "third_party/blink/public/platform/web_menu_source_type.h"
 #include "third_party/blink/public/web/web_context_menu_data.h"
 #include "third_party/blink/renderer/core/frame/frame_test_helpers.h"
@@ -25,6 +27,7 @@ namespace {
 
 class MockWebMediaPlayerForContextMenu : public EmptyWebMediaPlayer {
  public:
+  MOCK_CONST_METHOD0(Duration, double());
   MOCK_CONST_METHOD0(HasAudio, bool());
   MOCK_CONST_METHOD0(HasVideo, bool());
 
@@ -86,6 +89,8 @@ class ContextMenuControllerTest : public testing::Test {
     return web_frame_client_;
   }
 
+  void DurationChanged(HTMLVideoElement* video) { video->DurationChanged(); }
+
   void SetReadyState(HTMLVideoElement* video,
                      HTMLMediaElement::ReadyState state) {
     video->SetReadyState(state);
@@ -142,6 +147,7 @@ TEST_F(ContextMenuControllerTest, VideoNotLoaded) {
           {WebContextMenuData::kMediaCanRotate, false},
           {WebContextMenuData::kMediaCanPictureInPicture, false},
           {WebContextMenuData::kMediaPictureInPicture, false},
+          {WebContextMenuData::kMediaCanLoop, true},
       };
 
   for (const auto& expected_media_flag : expected_media_flags) {
@@ -201,6 +207,7 @@ TEST_F(ContextMenuControllerTest, VideoWithAudioOnly) {
           {WebContextMenuData::kMediaCanRotate, false},
           {WebContextMenuData::kMediaCanPictureInPicture, false},
           {WebContextMenuData::kMediaPictureInPicture, false},
+          {WebContextMenuData::kMediaCanLoop, true},
       };
 
   for (const auto& expected_media_flag : expected_media_flags) {
@@ -256,6 +263,7 @@ TEST_F(ContextMenuControllerTest, PictureInPictureEnabledVideoLoaded) {
           {WebContextMenuData::kMediaCanRotate, false},
           {WebContextMenuData::kMediaCanPictureInPicture, true},
           {WebContextMenuData::kMediaPictureInPicture, false},
+          {WebContextMenuData::kMediaCanLoop, true},
       };
 
   for (const auto& expected_media_flag : expected_media_flags) {
@@ -311,6 +319,126 @@ TEST_F(ContextMenuControllerTest, PictureInPictureDisabledVideoLoaded) {
           {WebContextMenuData::kMediaCanRotate, false},
           {WebContextMenuData::kMediaCanPictureInPicture, false},
           {WebContextMenuData::kMediaPictureInPicture, false},
+          {WebContextMenuData::kMediaCanLoop, true},
+      };
+
+  for (const auto& expected_media_flag : expected_media_flags) {
+    EXPECT_EQ(expected_media_flag.second,
+              !!(context_menu_data.media_flags & expected_media_flag.first))
+        << "Flag 0x" << std::hex << expected_media_flag.first;
+  }
+}
+
+TEST_F(ContextMenuControllerTest, MediaStreamVideoLoaded) {
+  // Make sure Picture-in-Picture is enabled.
+  GetDocument()->GetSettings()->SetPictureInPictureEnabled(true);
+
+  ContextMenuAllowedScope context_menu_allowed_scope;
+  HitTestResult hit_test_result;
+
+  // Setup video element.
+  Persistent<HTMLVideoElement> video = HTMLVideoElement::Create(*GetDocument());
+  blink::WebMediaStream web_media_stream;
+  blink::WebVector<blink::WebMediaStreamTrack> dummy_tracks;
+  web_media_stream.Initialize(dummy_tracks, dummy_tracks);
+  video->SetSrcObject(web_media_stream);
+  GetDocument()->body()->AppendChild(video);
+  test::RunPendingTasks();
+  SetReadyState(video.Get(), HTMLMediaElement::kHaveMetadata);
+  test::RunPendingTasks();
+
+  EXPECT_CALL(*static_cast<MockWebMediaPlayerForContextMenu*>(
+                  video->GetWebMediaPlayer()),
+              HasVideo())
+      .WillRepeatedly(Return(true));
+
+  DOMRect* rect = video->getBoundingClientRect();
+  LayoutPoint location((rect->left() + rect->right()) / 2,
+                       (rect->top() + rect->bottom()) / 2);
+  EXPECT_TRUE(ShowContextMenu(location, kMenuSourceMouse));
+
+  // Context menu info are sent to the WebLocalFrameClient.
+  WebContextMenuData context_menu_data =
+      GetWebFrameClient().GetContextMenuData();
+  EXPECT_EQ(WebContextMenuData::kMediaTypeVideo, context_menu_data.media_type);
+
+  const std::vector<std::pair<WebContextMenuData::MediaFlags, bool>>
+      expected_media_flags = {
+          {WebContextMenuData::kMediaInError, false},
+          {WebContextMenuData::kMediaPaused, true},
+          {WebContextMenuData::kMediaMuted, false},
+          {WebContextMenuData::kMediaLoop, false},
+          {WebContextMenuData::kMediaCanSave, false},
+          {WebContextMenuData::kMediaHasAudio, false},
+          {WebContextMenuData::kMediaCanToggleControls, true},
+          {WebContextMenuData::kMediaControls, false},
+          {WebContextMenuData::kMediaCanPrint, false},
+          {WebContextMenuData::kMediaCanRotate, false},
+          {WebContextMenuData::kMediaCanPictureInPicture, true},
+          {WebContextMenuData::kMediaPictureInPicture, false},
+          {WebContextMenuData::kMediaCanLoop, false},
+      };
+
+  for (const auto& expected_media_flag : expected_media_flags) {
+    EXPECT_EQ(expected_media_flag.second,
+              !!(context_menu_data.media_flags & expected_media_flag.first))
+        << "Flag 0x" << std::hex << expected_media_flag.first;
+  }
+}
+
+TEST_F(ContextMenuControllerTest, InfiniteDurationVideoLoaded) {
+  // Make sure Picture-in-Picture is enabled.
+  GetDocument()->GetSettings()->SetPictureInPictureEnabled(true);
+
+  ContextMenuAllowedScope context_menu_allowed_scope;
+  HitTestResult hit_test_result;
+  const char video_url[] = "https://example.com/foo.webm";
+
+  // Setup video element.
+  Persistent<HTMLVideoElement> video = HTMLVideoElement::Create(*GetDocument());
+  video->SetSrc(video_url);
+  GetDocument()->body()->AppendChild(video);
+  test::RunPendingTasks();
+  SetReadyState(video.Get(), HTMLMediaElement::kHaveMetadata);
+  test::RunPendingTasks();
+
+  EXPECT_CALL(*static_cast<MockWebMediaPlayerForContextMenu*>(
+                  video->GetWebMediaPlayer()),
+              HasVideo())
+      .WillRepeatedly(Return(true));
+
+  EXPECT_CALL(*static_cast<MockWebMediaPlayerForContextMenu*>(
+                  video->GetWebMediaPlayer()),
+              Duration())
+      .WillRepeatedly(Return(std::numeric_limits<double>::infinity()));
+  DurationChanged(video.Get());
+
+  DOMRect* rect = video->getBoundingClientRect();
+  LayoutPoint location((rect->left() + rect->right()) / 2,
+                       (rect->top() + rect->bottom()) / 2);
+  EXPECT_TRUE(ShowContextMenu(location, kMenuSourceMouse));
+
+  // Context menu info are sent to the WebLocalFrameClient.
+  WebContextMenuData context_menu_data =
+      GetWebFrameClient().GetContextMenuData();
+  EXPECT_EQ(WebContextMenuData::kMediaTypeVideo, context_menu_data.media_type);
+  EXPECT_EQ(video_url, context_menu_data.src_url.GetString());
+
+  const std::vector<std::pair<WebContextMenuData::MediaFlags, bool>>
+      expected_media_flags = {
+          {WebContextMenuData::kMediaInError, false},
+          {WebContextMenuData::kMediaPaused, true},
+          {WebContextMenuData::kMediaMuted, false},
+          {WebContextMenuData::kMediaLoop, false},
+          {WebContextMenuData::kMediaCanSave, false},
+          {WebContextMenuData::kMediaHasAudio, false},
+          {WebContextMenuData::kMediaCanToggleControls, true},
+          {WebContextMenuData::kMediaControls, false},
+          {WebContextMenuData::kMediaCanPrint, false},
+          {WebContextMenuData::kMediaCanRotate, false},
+          {WebContextMenuData::kMediaCanPictureInPicture, true},
+          {WebContextMenuData::kMediaPictureInPicture, false},
+          {WebContextMenuData::kMediaCanLoop, false},
       };
 
   for (const auto& expected_media_flag : expected_media_flags) {
